# phoebe

./: .gitignore  README.md  RESULTS.md  bench_bootstrap.sh  pyproject.toml
bench/case_studies/: README.md  evidence.json
demos/: circuit.tape  hero.tape  hero_sonnet.tape  hero_tall.tape  hero_tall_light.tape  hero_video.tape  logs.tape  promo_stage.py  watch.tape
research/: README.md  aiopslab.md  benchmark-difficulty.md  ibm-itbench-mast.md  mast-taxonomy.md
scripts/: capture_run.py  hero_trace.json  hero_trace_sonnet.json  narrate.py  playback.py
src/o11y_fsm/: __init__.py  app.py  prompts.py  telemetry.py
src/o11y_fsm/harbor/: __init__.py  agent.py  agent_runner.py  system_prompt.txt
src/phoebe/: __init__.py  app.py  prompts.py
src/phoebe/harbor/: __init__.py  agent.py  agent_runner.py  system_prompt.txt  task_prompt.txt
tests/: conftest.py  test_app.py  test_gates.py  test_live_together.py  test_runner_loop.py  test_runner_parse.py  test_runner_walk.py
tests/cases/: gates.json
